+Se añadieron CDN de bootstrap, se corrigieron cards de formación

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto A.P 4.0</title>
     <link href="./node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -127,26 +128,65 @@
         <div class="contCards">
             <!-- tecnicatura -->
             <div class="card cardFlex">
-                <img class="card-img-top cardImg" src="img/formacion/electricidad.png" alt="Electricista">
-                <div class="card-body">
+                <div class="contCardImg col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <img class="card-img-top cardImg" src="img/formacion/electricidad.png" alt="Electricista">
+                </div>
+                <div class="card-body col-lg-5 col-md-12 col-sm-12 col-xs-12">
                     <h3 class="tituloCards">Tecnicatura electricidad</h3>
                     <h4 class="subTituloCards">2015 - 2020 / Colegio Técnico San José</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <!-- domestika -->
+            <div class="card cardFlex">
+                <div class="card-body col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <h3 class="tituloCards">Diseño de páginas web con Wordpress</h3>
+                    <h4 class="subTituloCards">2021 / Domestika</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="contCardImg col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <img class="card-img-top cardImg" src="img/formacion/diseño-wordpress.jpg" alt="Diseño en wordpress">
+                </div>
+            </div>
             <!-- coderhouse desarrollo web -->
+            <div class="card cardFlex">
+                <div class="contCardImg col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <img class="card-img-top cardImg" src="img/formacion/desarrollo-web.png" alt="Desarrollador web">
+                </div>
+                <div class="card-body col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <h3 class="tituloCards">Desarrollor Web</h3>
+                    <h4 class="subTituloCards">2022 / Coder House</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
             <!-- coderhouse JavaScript -->
+            <div class="card cardFlex">
+                <div class="card-body col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <h3 class="tituloCards">JavaScript</h3>
+                    <h4 class="subTituloCards">2022 / Coder House</h4>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="contCardImg col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <img class="card-img-top cardImg" src="img/formacion/programador.png" alt="Programador JavaScript">
+                </div>
+            </div>
         </div>
     </section>
+    //ARREGLAR IMG CARDS
     <!-- Certificados -->
     <section id="certificados"></section>
     <!-- Experiencia Laboral -->
     <section id="experiencia"></section>
     <!-- contacto -->
     <section id="contacto"></section>
+
+    <!-- CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+
     <!-- SCRIPTS -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="scripts/index.js"></script>
+
 </body>
 </html>
