--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
                     </div>
                     <h3 class="tituloCards">Tecnicatura electricidad</h3>
                     <h4 class="subTituloCards">2015 - 2020 / Colegio Técnico San José</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
             <!-- domestika -->
@@ -317,20 +316,11 @@
                              data-aos-duration="500" class="container p-4 pb-0">
                             <!-- Section: Social media -->
                             <section class="mb-4">
-                              <!-- Facebook -->
-                              <a
-                                class="redesIcons btn text-white btn-floating m-1"
-                                style="background-color: #3b5998;"
-                                href="#!"
-                                role="button"
-                                ><i class=" fab fa-facebook-f"></i
-                              ></a>
-                        
                               <!-- Gmail -->
                               <a
                                 class="redesIcons btn text-white btn-floating m-1"
                                 style="background-color: #dd4b39;"
-                                href="#!"
+                                href="mailto:joaquinrodriguez.webdev@gmail.com"
                                 role="button"
                                 ><i class="fab fa-google"></i
                               ></a>
@@ -338,23 +328,15 @@
                               <a
                                 class="redesIcons btn text-white btn-floating m-1"
                                 style="background-color: #10c300;"
-                                href="#!"
+                                href="https://walink.co/54f481"
                                 role="button"
                                 ><i class="fab fa-whatsapp"></i>
                             </a>
-                              <!-- Instagram -->
-                              <a
-                                class="redesIcons btn text-white btn-floating m-1"
-                                style="background-color: #ac2bac;"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-instagram"></i
-                              ></a>
                               <!-- Linkedin -->
                               <a
                                 class="redesIcons btn text-white btn-floating m-1"
                                 style="background-color: #0082ca;"
-                                href="#!"
+                                href="https://www.linkedin.com/in/joaqu%C3%ADn-rodr%C3%ADguez-3aa46a1b4/"
                                 role="button"
                                 ><i class="fab fa-linkedin-in"></i
                               ></a>
@@ -362,7 +344,7 @@
                               <a
                                 class="redesIcons btn text-white btn-floating m-1"
                                 style="background-color: #333333;"
-                                href="#!"
+                                href="https://github.com/JoaRodriguez21"
                                 role="button"
                                 ><i class="fab fa-github"></i
                               ></a>
